# TargetGenerator

./: .gitignore  Dockerfile  README.md  flask_target_generator.py  pdf_gen.py  pyproject.toml  requirements.txt  target_gen.ipynb  target_generator.spec  targetgenerator.py  tkinter_target_generator.py  tkinter_target_generator.spec
static/: style.css
templates/: pdf.html  targetgenerator.html
